--- a/DemoMvc069/Views/HelloWorld/Index.cshtml
+++ b/DemoMvc069/Views/HelloWorld/Index.cshtml
@@ -1,5 +1,11 @@
 @{
     ViewData["Title"] = "Index";
 }
-<h2>Hello from Index.cshtml</h2>
-<p>This is the Index view of the HelloWorld controller.</p>
+<h1>Nguyễn Đình Dũng - 2121050069</h1>
+<h2>Buổi học số 3:</h2>
+<p>
+- Cách tạo project .net MVC: dotnet new mvc ...
+- namespace là gì, cách đặt tên
+- Cách tạo Controller và View
+- Định tuyến (route) trong mvc
+- IActionResult là gì? Các kiểu trả về: ViewResult, RedirectResult, RedirectToActionResult, JsonResult, FileResult, StatusCodeResult</p>
